third_party/move/move-compiler/tests/move_check/translated_ir_tests/move/commands/if_moves_else_doesnt.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/if_moves_else_doesnt.move:6:13
  │
4 │     let y = if (true) move x else 0;
  │                       ------
  │                       │
  │                       The value of 'x' might have been previously moved here.
  │                       Suggestion: use 'copy x' to avoid the move.
5 │     y;
6 │     assert!(x == 0, 42);
  │             ^ Invalid usage of previously moved variable 'x'.

